registration process is ready to go

--- a/public/css/registration.css
+++ b/public/css/registration.css
@@ -42,6 +42,10 @@ input:user-valid {
     border-color: green;
 }
 
+input:hover, input:focus {
+    border-color: rgb(221, 187, 252);
+}
+
 
 p {
     font-size: small;
